--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,10 +39,11 @@ jobs:
         with:
           submodules: recursive
       - uses: dtolnay/rust-toolchain@1.68.2
-      - uses: pnpm/action-setup@c3b53f6a16e57305370b4ae5a540c2077a1d50dd # v2.2.4
+      - uses: actions/setup-node@64ed1c7eab4cce3362f8c340dee64e5eaeef8f7c # v3.6.0
         with:
-          version: 7.26.1
-          run_install: true
+          node-version: 18
+          cache: yarn
+      - run: yarn install --frozen-lockfile
       - uses: Swatinem/rust-cache@359a70e43a0bb8a13953b04a90f76428b4959bb6 # v2.2.0
         with:
           key: udeps
