--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,7 @@ url = { workspace = true }
 gobuild = "0.1.0-alpha.1"
 
 [workspace.dependencies]
-stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", rev = "b2ebbc7" }
+stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.42.2" }
 kube = { version = "0.82.2", default-features = false, features = ["client", "openssl-tls"] }
 k8s-openapi = { version = "0.18.0", default-features = false, features = ["v1_26"] }
 tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
