--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "dev": "vite"
   },
   "devDependencies": {
+    "@types/feather-icons": "^4.29.1",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "@vitest/coverage-c8": "^0.31.1",
@@ -34,6 +35,7 @@
   "dependencies": {
     "@solidjs/router": "^0.8.2",
     "@unocss/reset": "^0.51.12",
+    "feather-icons": "^4.29.0",
     "openapi-fetch": "^0.2.0",
     "solid-js": "^1.7.4"
   }
