--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,24 +18,28 @@ openapi = ["dep:utoipa"]
 
 [dependencies]
 tokio = { workspace = true, features = ["process"] }
+utoipa = { workspace = true, optional = true }
+stackable-operator = { workspace = true }
 k8s-openapi = { workspace = true }
 serde_json = { workspace = true }
 serde_yaml = { workspace = true }
 indexmap = { workspace = true }
 reqwest = { workspace = true }
 tracing = { workspace = true }
-utoipa = { workspace = true, optional = true }
+bcrypt = { workspace = true }
 snafu = { workspace = true }
 which = { workspace = true }
 serde = { workspace = true }
 tera = { workspace = true }
 kube = { workspace = true }
+rand = { workspace = true }
 url = { workspace = true }
 
 [build-dependencies]
 gobuild = "0.1.0-alpha.1"
 
 [workspace.dependencies]
+stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.42.2" }
 kube = { version = "0.82.2", default-features = false, features = ["client", "openssl-tls"] }
 k8s-openapi = { version = "0.18.0", default-features = false, features = ["v1_26"] }
 tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
@@ -54,11 +58,13 @@ serde_yaml = "0.9.21"
 dotenvy = "0.15.7"
 tracing = "0.1.37"
 semver = "1.0.17"
+bcrypt = "0.14.0"
 utoipa = "3.3.0"
 axum = "0.6.18"
 snafu = "0.7.4"
 which = "4.4.0"
 tera = "1.18.1"
+rand = "0.8.5"
 phf = "0.11.1"
 url = "2.3.1"
 xdg = "2.4.1"
