--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ serde = { workspace = true }
 tera = { workspace = true }
 kube = { workspace = true }
 rand = { workspace = true }
+sha2 = { workspace = true }
 url = { workspace = true }
 
 [build-dependencies]
@@ -64,6 +65,7 @@ axum = "0.6.18"
 snafu = "0.7.4"
 which = "4.4.0"
 tera = "1.18.1"
+sha2 = "0.10.7"
 rand = "0.8.5"
 phf = "0.11.1"
 url = "2.3.1"
