--- a/rust/stackablectl/Cargo.toml
+++ b/rust/stackablectl/Cargo.toml
@@ -14,6 +14,7 @@ stackable-cockpit = { path = "../stackable-cockpit", features = ["openapi"] }
 stackable-operator.workspace = true
 
 clap_complete.workspace = true
+clap_complete_nushell.workspace = true
 clap.workspace = true
 comfy-table.workspace = true
 directories.workspace = true
