--- a/rust/xtask/Cargo.toml
+++ b/rust/xtask/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2021"
 publish = false
 
 [dependencies]
-clap_complete = { workspace = true }
+clap_complete.workspace = true
+clap_complete_nushell.workspace = true
 clap_mangen = "0.2.10"
 clap.workspace = true
 once_cell.workspace = true
