--- a/rust/stackable-cockpit/Cargo.toml
+++ b/rust/stackable-cockpit/Cargo.toml
@@ -20,6 +20,7 @@ indexmap.workspace = true
 k8s-openapi.workspace = true
 kube.workspace = true
 rand.workspace = true
+regex.workspace = true
 reqwest.workspace = true
 semver.workspace = true
 serde_json.workspace = true
