--- a/.github/workflows/pr_cockpit.yml
+++ b/.github/workflows/pr_cockpit.yml
@@ -15,7 +15,7 @@ on:
       - "go.sum"
 
 env:
-  RUST_VERSION: 1.80.1
+  RUST_VERSION: 1.83.0
   GO_VERSION: '^1.22.5'
   CARGO_TERM_COLOR: always
   CARGO_INCREMENTAL: "0"
@@ -118,7 +118,7 @@ jobs:
 
       - name: Update Version
         run: |
-          cargo install cargo-edit --version 0.11.11 --locked
+          cargo install cargo-edit --version 0.11.11
           cargo set-version --offline --package stackable-cockpit 0.0.0-pr${{ github.event.pull_request.number }}
 
       # Recreate charts and publish charts and docker image. The "-e" is needed as we want to override the
