--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ phf = "0.11"
 phf_codegen = "0.11"
 rand = "0.8"
 regex = "1.10"
-reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
 rstest = "0.22"
 semver = { version = "1.0", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
@@ -54,6 +54,7 @@ tower-http = { version = "0.5", features = ["validate-request"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 url = "2.5"
+urlencoding = "2.1.3"
 utoipa = { version = "4.2", features = ["indexmap"] }
 utoipa-swagger-ui = { version = "7.1", features = ["axum"] }
 uuid = { version = "1.10", features = ["v4"] }
