--- a/rust/stackable-cockpit/Cargo.toml
+++ b/rust/stackable-cockpit/Cargo.toml
@@ -32,6 +32,7 @@ tera.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 url.workspace = true
+urlencoding.workspace = true
 utoipa = { workspace = true, optional = true }
 which.workspace = true
 futures.workspace = true
