--- a/rust/stackablectl/Cargo.toml
+++ b/rust/stackablectl/Cargo.toml
@@ -34,4 +34,5 @@ tracing-subscriber.workspace = true
 tracing.workspace = true
 futures.workspace = true
 termion.workspace = true
+urlencoding.workspace = true
 libc.workspace = true
