--- a/deploy/helm/stackable-cockpit/values.yaml
+++ b/deploy/helm/stackable-cockpit/values.yaml
@@ -1,7 +1,7 @@
 # Default values for stackable-cockpit.
 ---
 image:
-  repository: docker.stackable.tech/stackable/stackable-cockpit
+  repository: oci.stackable.tech/sdp/stackable-cockpit
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
