chore: Release stackablectl 25.3.0

--- a/rust/stackablectl/Cargo.toml
+++ b/rust/stackablectl/Cargo.toml
@@ -2,7 +2,7 @@
 name = "stackablectl"
 description = "Command line tool to interact with the Stackable Data Platform"
 # See <project-root>/Cargo.toml
-version = "24.11.4-native-certs"
+version = "25.3.0"
 authors.workspace = true
 license.workspace = true
 edition.workspace = true
