--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ resolver = "2"
 version = "0.0.0-dev"
 authors = ["Stackable GmbH <info@stackable.tech>"]
 license = "OSL-3.0"
+# We can use 2024 as soon as https://github.com/rust-lang/cc-rs/issues/1409 is
+# fixed / supported.
 edition = "2021"
 repository = "https://github.com/stackabletech/stackable-cockpit/"
 
@@ -20,7 +22,7 @@ axum = { version = "0.7", features = ["http2"] }
 axum-extra = { version = "0.9", features = ["typed-header"] }
 bcrypt = "0.15"
 bindgen = "0.70.1"
-cc = "1.0.83"
+cc = "1.0.106"
 clap = { version = "4.5", features = ["derive", "env"] }
 clap_complete = "4.5"
 clap_complete_nushell = "4.5"
@@ -29,8 +31,8 @@ directories = "5.0"
 dotenvy = "0.15"
 futures = "0.3"
 indexmap = { version = "2.2", features = ["serde"] }
-k8s-openapi = { version = "0.22", default-features = false, features = ["v1_30"] }
-kube = { version = "0.93", default-features = false, features = ["client", "rustls-tls", "ws", "socks5", "http-proxy"] }
+k8s-openapi = { version = "0.24", default-features = false, features = ["v1_32"] }
+kube = { version = "0.99", default-features = false, features = ["client", "rustls-tls", "ws", "socks5", "http-proxy"] }
 lazy_static = "1.5"
 libc = "0.2"
 once_cell = "1.19"
@@ -46,7 +48,7 @@ serde_json = "1.0"
 serde_yaml = "0.9"
 sha2 = "0.10"
 snafu = { version = "0.8", features = ["futures"] }
-stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "stackable-operator-0.74.0" }
+stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "stackable-operator-0.92.0", default-features = false }
 tera = "1.20"
 termion = "4.0"
 tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "fs", "process", "io-std"] }
